style: dark mode support added + fixed height issue + fixed point-events issue

--- a/src/Drawer/_Drawer.sass
+++ b/src/Drawer/_Drawer.sass
@@ -22,6 +22,7 @@
 		@include theme-border-top
 		transform: translateY(100%)
 		transition: transform 0.25s cubic-bezier(0.4, -0.40, 0.8, 1.0) 0s // hide/out transition
+		pointer-events: initial
 
 		&.--disableAnimation
 			transition: none
